--- a/css/css.css
+++ b/css/css.css
@@ -1,28 +1,28 @@
+img{
+    max-width: 400px;
+}
+
+/*_____________________________*/
+/*_____________________________*/
+/*          PRINCIPAL          */
+/*_____________________________*/
+/*_____________________________*/
+
 html
 {
     font-family: 'Raleway', sans-serif;
 }
 
-body
-{
-    width: 95vw;
-}
-
-header
-{
-    width: 100vw;
-}
-
-main
-{
-    width: 95vw;
-}
-
+/*_____________________________*/
+/*_____________________________*/
 /* GESTION DES TEXTES & TITRES */
+/*_____________________________*/
+/*_____________________________*/
+
 p, a
 {
     color: black;
-    font-size: min(5vw, 16px);
+    font-size: 16px;
 }
 
 a
@@ -33,32 +33,29 @@ a
 
 h3
 {
-    font-size: min(5vw, 22px);
-}
-
-h4
-{
     padding: 2% 2% 2% 5%;
-    font-size: min(5vw, 20px);
     margin: 0;
     text-align: left;
 }
 
-/* HEADER */
+/*_____________________________*/
+/*_____________________________*/
+/*          HEADER             */
+/*_____________________________*/
+/*_____________________________*/
 
 nav
 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 8vw;
+    margin: 0 8%;
     height: 52px;
 }
 
 #logo
 {
-    width: 95.5px;
-    height: 45px;
+    width: 120px;
 }
 
 nav ul
@@ -82,15 +79,18 @@ li.navButton:hover
     border-top: #0065FC 2px solid;
 }
 
-/* SECTION RECHERCHE */
+/*_____________________________*/
+/*_____________________________*/
+/*      SECTION RECHERCHE      */
+/*_____________________________*/
+/*_____________________________*/
 
 #recherche
 {
-    width: 90vw;
-    padding: 5%;
+    padding: 1% 2% 0 2%;
 }
 
-/* Search Bar */
+/* SEARCH BAR */
 
 .search
 {
@@ -144,6 +144,11 @@ input
     border-bottom-right-radius: 10px;
 }
 
+.buttonSearch i
+{
+    display: none;
+}
+
 .iconHidden
 {
     display: none;
@@ -179,8 +184,11 @@ input
 }
 
 
-
-/* ____FILTRES_____ */
+/*_____________________________*/
+/*_____________________________*/
+/*          FILTRES            */
+/*_____________________________*/
+/*_____________________________*/
 
 .alignFilters
 {
@@ -253,34 +261,36 @@ input
     background-color: #DEEBFF;
 }
 
-
-/* Section Hebergement*/
+/*_____________________________*/
+/*_____________________________*/
+/*      SECTION HEBERGEMENT    */
+/*_____________________________*/
+/*_____________________________*/
 
 #hebergements
 {
+    padding: 0% 2%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .hebergements
 {
-    width: 50vw;
+    width: 70%;
     background-color: #F2F2F2;
     border-radius: 45px;
-    padding: 10px 25px;
 }
 
 .paddingTittle
 {
-    padding: 0 0 0 10px;
+    padding: 0 0 0 30px;
 }
 
 .popularity
 {
-    width: 30vw;
     background-color: #F2F2F2;
     border-radius: 45px;
-    padding: 10px 25px;
+    margin-left: 2%;
 }
 
 .galerie
@@ -368,31 +378,29 @@ input
 
 .activities
 {
-    width : 85vw;
+    width : 95%;
     display: flex;
     flex-flow: column nowrap;
-    padding: 0 0 0 3vw;
+    padding: 3% 2%;
 }
+
 
 .galerieActivities
 {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-around;
+}
+
+.grandesVignettes
+{
+    border-radius: 20px;
+    box-shadow: 0 1px 10px #afafaf;
 }
 
 .petitesVignettes
 {
     display: flex;
     flex-direction: column;
-}
-
-.grandesVignettesActivities
-{
-    
-    border-radius: 20px;
-    box-shadow: 0 1px 10px #afafaf;
-    margin: 1% 4%;
 }
 
 .vignettesActivities
@@ -409,55 +417,8 @@ input
     object-fit: fill;
 }
 
-/*
-.activities
-{
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
-
-.galerieActivities
-{
-    display: flex;
-    flex-flow: row nowrap;
-}
-
-.grandesVignettes
-{
-    width: 18vw;
-    max-height: 600px;
-    min-height: 400px;
-    border-radius: 20px;
-    background-color: #FFFFFF;
-    box-shadow: 0 1px 10px #afafaf;
-}
-
-.petitesVignettes
-{
-    width: 18vw;
-    max-height: 600px;
-    min-height: 400px;
-    border-radius: 20px;
-    background-color: #FFFFFF;
-    box-shadow: 0 1px 10px #afafaf;
-}
-
-.imgVignettesActivities
-{
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100%;
-}
-*/
-
-
-
-
 /* Pied de page */
-
+/*
 footer
 {
     background-color: #F2F2F2;
@@ -467,13 +428,13 @@ footer
 {
     display: flex;
 }
-
+*/
 /* ____________________ */
 /* ==================== */
 /*   RESPONSIVE MOBILE  */
 /* ==================== */
 /* ____________________ */
-
+/*
 @media screen and (max-width: 768px)
 {
     html, body
@@ -481,9 +442,10 @@ footer
         width: 100vw;
         margin: 0;
         font-family: 'Raleway', sans-serif;
-    }
+    }*
+/*
     /* Header mobile */
-
+/*
     nav
     {
         display: flex;
@@ -509,15 +471,17 @@ footer
     }
 
     /*_____SEARCH MOBILE_____*/
-
+/*
     .search
     {
         justify-content: center;
     }
+*/
+
 
     
     /* _____FILTRES MOBILES_____*/
-
+/*
         .alignFilters
     {
         display: flex;
@@ -527,20 +491,21 @@ footer
         margin: 0 25px 0 25px;
         cursor: pointer;
     }
-
+*/
     /* SWITCH RECHERCHE TEXTE TO ICON */
-    .invisible
+/*
+    .buttonSearch i
     {
-        visibility: visible;
+        display: block;
     }
 
     .textHidden
     {
         display: none;
     }
-
+*/
     /* --- MAIN MOBILE --- */
-
+/*
     .recherche
     {
         display: flex;
@@ -558,8 +523,9 @@ footer
     {
         background: #FFFFFF;
     }
-
+*/
     /* SECTION HEBERGEMENT */
+/*
     #hebergements
     {
         display: flex;
@@ -579,7 +545,7 @@ footer
     }
 
 }
-
+/*
 
 /* ____________________ */
 /* ==================== */
@@ -592,18 +558,19 @@ footer
 {
 
     /* SWITCH RECHERCHE TEXTE TO ICON */
-    .invisible
+/* 
+    .buttonSearch i
     {
-        visibility: visible;
+        display: block;
     }
 
     .textHidden
     {
         display: none;
     }
-
+*/
     /* SECTION HEBERGEMENT */
-    
+/*   
     #hebergements
     {
         display: flex;
@@ -714,3 +681,4 @@ footer
         color: #e0e0e0;
     }
 }
+*/
