--- a/css/css.css
+++ b/css/css.css
@@ -382,6 +382,14 @@ input
 
 /*Section ACTIVITES */
 
+/* 
+
+CHECKER BACKGROUND CODE
+
+background-color: grey;
+border: red 3px solid;
+
+*/
 .activities
 {
     width : 95%;
@@ -399,18 +407,51 @@ input
     justify-content: space-between;
 }
 
+.columnGalerie
+{
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: 0 1px 10px #afafaf;
+    background-color: rgb(168, 113, 113);
+    border: rgb(81, 0, 255) 3px solid;
+}
+
+.columnSplitGalerie
+{
+    max-width: 100%;
+    margin: auto;
+    border-radius: 20px;
+    box-shadow: 0 1px 10px #afafaf;
+    background-color: rgb(113, 168, 125);
+    border: rgb(255, 0, 149) 3px solid;
+}
+
+img.activitesImg
+{
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+    object-fit: contain;
+    background-color: grey;
+}
+
+/*
 .activites
 {
+    max-width: 50%;
     border-radius: 20px;
     box-shadow: 0 1px 10px #afafaf;
     margin: 10px;
-}
-
+    background-color: grey;
+    border: rgb(0, 255, 34) 3px solid;
+}*/
+/*
 .activitesImg
 {
     height: 800px;
     border-radius: 20px 20px 0 0;
     object-fit: cover;
+    background-color: grey;
 }
 
 .activitesImgSmall
@@ -418,13 +459,18 @@ input
     height: 300px;
     border-radius: 20px 20px 0 0;
 }
+*/
 
+/*
 .activitesSplit
 {
+    height: 50%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-}
+    background-color: grey;
+    border: rgb(255, 0, 234) 3px solid;
+}*/
 
 /* Pied de page */
 
