--- a/css/css.css
+++ b/css/css.css
@@ -346,7 +346,7 @@ input
 {
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    padding: 2%;
+    padding: 4px;
     width: 35%;
     height: 130px;
     object-fit: cover;
@@ -802,9 +802,9 @@ footer
     {
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
-        padding: 2%;
         width: 35%;
         height: 130px;
+        padding: 4px;
         object-fit: cover;
     }
 
