--- a/css/css.css
+++ b/css/css.css
@@ -22,6 +22,13 @@ header, body
     background-color: #FFFFFF;
 }
 
+header, main, footer
+{
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*_____________________________*/
 /*_____________________________*/
 /* GESTION DES TEXTES & TITRES */
@@ -31,7 +38,17 @@ header, body
 p, a
 {
     color: black;
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.recherche p
+{
+    margin: 0;
+}
+
+.marginZero
+{
+    margin: 0;
 }
 
 a
@@ -68,7 +85,7 @@ nav
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 8%;
+    margin: 0 10px;
     height: 52px;
 }
 
@@ -106,7 +123,7 @@ li.navButton:hover
 
 #recherche
 {
-    padding: 25px;
+    padding: 15px;
 }
 
 /* SEARCH BAR */
@@ -208,7 +225,7 @@ input
 {
     display: flex;
     flex-direction: row;
-    align-items: left;
+    align-items: center;
     justify-content: left;
 }
 
@@ -232,7 +249,6 @@ input
     color: #0065FC;
     cursor: pointer;
 }
-
 
 li.filtersButton:hover
 {
@@ -394,7 +410,7 @@ li.filtersButton:hover
 {
     padding: 5px 20px;
     margin: 0;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .notation
@@ -581,11 +597,6 @@ footer
     }
 
     /*_____SEARCH MOBILE_____*/
-
-    .search
-    {
-        justify-content: center;
-    }
 
 
     /* _____FILTRES MOBILES_____*/
