--- a/css/css.css
+++ b/css/css.css
@@ -61,6 +61,7 @@ h3
 {
     margin: 0;
     text-align: left;
+    font-size: 16px;
 }
 
 .marginZero
@@ -73,9 +74,19 @@ h3
     margin-bottom: 25px;
 }
 
+.marginLineMid
+{
+    margin-bottom: 15px;
+}
+
 .marginBr
 {
     margin-top: 50px;
+}
+
+.paddingSpace
+{
+    padding: 0 20px 0 0;
 }
 
 .fontBold
@@ -99,7 +110,7 @@ nav
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 10px;
+    margin: 0 50px;
     height: 52px;
 }
 
@@ -137,7 +148,7 @@ li.navButton:hover
 
 #recherche
 {
-    padding: 15px;
+    margin: 30px 25px;
 }
 
 /* SEARCH BAR */
@@ -157,6 +168,7 @@ li.navButton:hover
 
 .iconMap
 {
+    border: #F2F2F2 2px solid;
     background-color: #F2F2F2;
     padding: 15px 15px 15px 15px;
     border-bottom-left-radius: 10px;
@@ -186,6 +198,7 @@ input
 .buttonSearch
 {
     background-color: #0065FC;
+    border: #0065FC 2px solid;
     color: #F2F2F2;
     font-weight: bold;
     cursor: pointer;
@@ -211,13 +224,27 @@ input
 
 /* Infobulle */
 
+.infobulle
+{
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
+.infobulleIcon
+{
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+}
+
 .buttonInfoBulle
 {
     border: 2px #F2F2F2 solid;
     background-color: #FFFFFF;
-    height: 25px; 
-    width: 25px;
-    border-radius:25px;
+    height: 20px; 
+    width: 20px;
+    border-radius:50px;
     padding: 2px 0 0 0;
 }
 
@@ -239,8 +266,10 @@ input
 {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: left;
+    margin: 20px 0;
 }
 
 .filtersZone
@@ -249,6 +278,8 @@ input
     flex-flow: row wrap;
     list-style: none;
     font-weight: bold;
+    padding: 0;
+    margin: 0;
 }
 
 .filtersButton
@@ -277,6 +308,12 @@ li.filtersButton:hover
     background-color: #DEEBFF;
 }
 
+.boxIcon
+{
+    width: 52px;
+    height: 52px;
+}
+
 .filtersIcons
 {
     background-color: #DEEBFF;
@@ -300,6 +337,7 @@ li.filtersButton:hover
 {
     display: flex;
     justify-content: space-between;
+    margin: 0 25px;
 }
 
 .hebergements
@@ -332,6 +370,15 @@ li.filtersButton:hover
     padding: 1px;
 }
 
+.description
+{
+    width: 100%;
+    padding: 5px 15px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+}
+
 .descriptionText
 {
     width: 100%;
@@ -346,14 +393,15 @@ li.filtersButton:hover
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .vignettes
 {
-    width: 30%;
+    width: 31%;
+    min-width: 206px;
     height: 225px;
+    margin-bottom: 20px;
     background-color: #FFFFFF;
     border-radius: 20px;
     display: flex;
@@ -444,6 +492,11 @@ a.linkSet
 /*      SECTION ACTIVITES      */
 /*_____________________________*/
 /*_____________________________*/
+
+#activities
+{
+    margin: 0 25px;
+}
 
 .activities
 {
