--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,50 @@
 /*_____________________________*/
 /*_____________________________*/
 
+/* BUTON FILTRE */
+
+.testFiltre
+{
+    width: fit-content;
+    height: 56px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    border-radius: #e0e0e0 45px solid;
+    border: 2px #e0e0e0 solid;
+    border-radius: 45px;
+    margin: 10px;
+}
+
+.testFiltre:hover
+{
+    cursor: pointer;
+    color: #0065FC;
+    background: #DEEBFF;
+    border-radius: #DEEBFF 45px solid;
+    border: 2px #DEEBFF solid;
+}
+
+.testFiltreIcon
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 56px;
+    height: 56px;
+    background-color: #DEEBFF;
+    color: #0065FC;
+    border-radius: 50px;
+    border: 2px #DEEBFF solid;
+    margin: -2px;
+}
+
+.testFiltreText
+{
+    font-weight: bold;
+    padding: 0 15px;
+}
+
 /* 
 CHECKER BACKGROUND CODE
 
@@ -35,6 +79,7 @@ header, main, footer
 /*_____________________________*/
 /*_____________________________*/
 
+
 p, a
 {
     color: black;
@@ -64,6 +109,11 @@ h3
     font-size: 16px;
 }
 
+.vignetteGalerie h3
+{
+    padding: 15px 0 0 15px;
+}
+
 .marginZero
 {
     margin: 0;
@@ -80,6 +130,11 @@ h3
 }
 
 .marginBr
+{
+    margin-top: 50px;
+}
+
+.marginBrMid
 {
     margin-top: 50px;
 }
@@ -261,6 +316,51 @@ input
 /*          FILTRES            */
 /*_____________________________*/
 /*_____________________________*/
+
+/* BUTON FILTRE */
+
+.testFiltre
+{
+    width: fit-content;
+    height: 56px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    border-radius: #e0e0e0 45px solid;
+    border: 2px #e0e0e0 solid;
+    border-radius: 45px;
+    margin: 10px;
+}
+
+.testFiltre:hover
+{
+    cursor: pointer;
+    color: #0065FC;
+    background: #DEEBFF;
+    border-radius: #DEEBFF 45px solid;
+    border: 2px #DEEBFF solid;
+}
+
+.testFiltreIcon
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 56px;
+    height: 56px;
+    background-color: #DEEBFF;
+    color: #0065FC;
+    border-radius: 50px;
+    border: 2px #DEEBFF solid;
+    margin: -2px;
+}
+
+.testFiltreText
+{
+    font-weight: bold;
+    padding: 0 15px;
+}
+/* End filtre*/
 
 .filters
 {
@@ -751,8 +851,10 @@ footer
 
     /* SECTION ACTIVITE */
 
+
     .vignetteGalerie
     {
+        width: 100%;
         height: 250px;
         margin-bottom: 20px;
     }
