--- a/css/css.css
+++ b/css/css.css
@@ -97,6 +97,11 @@ a
     color: black;
 }
 
+h2.recherche
+{
+    font-size: ;
+}
+
 h2
 {
     margin: 0;
@@ -106,7 +111,7 @@ h3
 {
     margin: 0;
     text-align: left;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .vignetteGalerie h3
@@ -142,6 +147,11 @@ h3
 .paddingSpace
 {
     padding: 0 20px 0 0;
+}
+
+.paddingSides
+{
+    padding: 10px;
 }
 
 .fontBold
@@ -203,7 +213,7 @@ li.navButton:hover
 
 #recherche
 {
-    margin: 30px 25px;
+    margin: 30px 15px;
 }
 
 /* SEARCH BAR */
@@ -328,7 +338,7 @@ input
     border-radius: #e0e0e0 45px solid;
     border: 2px #e0e0e0 solid;
     border-radius: 45px;
-    margin: 10px;
+    margin: 10px 10px 10px 0;
 }
 
 .testFiltre:hover
@@ -357,7 +367,7 @@ input
 .testFiltreText
 {
     font-weight: bold;
-    padding: 0 15px;
+    padding: 0 10px;
 }
 /* END FILTRE */
 
@@ -426,7 +436,6 @@ input
 
 .description
 {
-    width: 100%;
     padding: 5px 15px;
     display: flex;
     flex-flow: column wrap;
@@ -682,6 +691,7 @@ footer
         display: flex;
         flex-direction: column;
         margin-bottom: 30px;
+        margin: 0;
     }
 
     nav ul 
@@ -717,13 +727,18 @@ footer
 
     h2
     {
-        margin: 25px 0 0 10px;
+        margin: 25px 0;
     }
 
     /*_____SEARCH MOBILE_____*/
 
 
     /* _____FILTRES MOBILES_____*/
+
+    .filters
+    {
+        margin: 0 0 25px 0;
+    }
 
         .alignFilters
     {
@@ -805,7 +820,7 @@ footer
 
     .vignettes
     {
-        width: 90%;
+        width: 100%;
         height: auto;
     }
 
@@ -898,7 +913,8 @@ footer
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-around;
-        padding: 0;
+        padding: 0 10px;
+        background-color: #F2F2F2;
     }
 
     .hebergements
